[gd_scene load_steps=10 format=4 uid="uid://d5u422o0ttax"]

[ext_resource type="PackedScene" uid="uid://c7brjkwt2h2i2" path="res://Scenes/player.tscn" id="1_qxrlw"]
[ext_resource type="Script" uid="uid://cjwylhfuovmf0" path="res://Scripts/game.gd" id="1_wrm1d"]
[ext_resource type="Texture2D" uid="uid://cq6nyvrrlet51" path="res://Assets/Tiles/grass_tile_64.png" id="2_wowpa"]
[ext_resource type="PackedScene" uid="uid://dhhynuselpdt6" path="res://Scenes/blue_slime.tscn" id="2_wrm1d"]
[ext_resource type="PackedScene" uid="uid://c8fygka7bcext" path="res://Scenes/pond.tscn" id="3_wowpa"]
[ext_resource type="PackedScene" uid="uid://ct1x6878xw554" path="res://Scenes/title.tscn" id="4_i6g32"]
[ext_resource type="PackedScene" uid="uid://carqaem1053tg" path="res://Scenes/lush_chimp.tscn" id="5_1l0tm"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1l0tm"]
texture = ExtResource("2_wowpa")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSet" id="TileSet_v158k"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_1l0tm")

[node name="Game" type="Node"]
script = ExtResource("1_wrm1d")

[node name="World" type="Node2D" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="World"]
tile_map_data = PackedByteArray("AAD1//r/AAAAAAAAAAD1//v/AAAAAAEAAAD2//r/AAABAAAAAAD2//v/AAABAAEAAAD1//z/AAAAAAAAAAD1//3/AAAAAAEAAAD2//z/AAABAAAAAAD2//3/AAABAAEAAAD1//7/AAAAAAAAAAD1////AAAAAAEAAAD2//7/AAABAAAAAAD2////AAABAAEAAAD1/wAAAAAAAAAAAAD1/wEAAAAAAAEAAAD2/wAAAAABAAAAAAD2/wEAAAABAAEAAAD1/wIAAAAAAAAAAAD1/wMAAAAAAAEAAAD2/wIAAAABAAAAAAD2/wMAAAABAAEAAAD1/wQAAAAAAAAAAAD1/wUAAAAAAAEAAAD2/wQAAAABAAAAAAD2/wUAAAABAAEAAAD3//r/AAAAAAAAAAD3//v/AAAAAAEAAAD4//r/AAABAAAAAAD4//v/AAABAAEAAAD3//z/AAAAAAAAAAD3//3/AAAAAAEAAAD4//z/AAABAAAAAAD4//3/AAABAAEAAAD3//7/AAAAAAAAAAD3////AAAAAAEAAAD4//7/AAABAAAAAAD4////AAABAAEAAAD3/wAAAAAAAAAAAAD3/wEAAAAAAAEAAAD4/wAAAAABAAAAAAD4/wEAAAABAAEAAAD3/wIAAAAAAAAAAAD3/wMAAAAAAAEAAAD4/wIAAAABAAAAAAD4/wMAAAABAAEAAAD3/wQAAAAAAAAAAAD3/wUAAAAAAAEAAAD4/wQAAAABAAAAAAD4/wUAAAABAAEAAAD5//r/AAAAAAAAAAD5//v/AAAAAAEAAAD6//r/AAABAAAAAAD6//v/AAABAAEAAAD5//z/AAAAAAAAAAD5//3/AAAAAAEAAAD6//z/AAABAAAAAAD6//3/AAABAAEAAAD5//7/AAAAAAAAAAD5////AAAAAAEAAAD6//7/AAABAAAAAAD6////AAABAAEAAAD5/wAAAAAAAAAAAAD5/wEAAAAAAAEAAAD6/wAAAAABAAAAAAD6/wEAAAABAAEAAAD5/wIAAAAAAAAAAAD5/wMAAAAAAAEAAAD6/wIAAAABAAAAAAD6/wMAAAABAAEAAAD5/wQAAAAAAAAAAAD5/wUAAAAAAAEAAAD6/wQAAAABAAAAAAD6/wUAAAABAAEAAAD7//r/AAAAAAAAAAD7//v/AAAAAAEAAAD8//r/AAABAAAAAAD8//v/AAABAAEAAAD7//z/AAAAAAAAAAD7//3/AAAAAAEAAAD8//z/AAAAAAAAAAD8//3/AAABAAEAAAD7//7/AAAAAAAAAAD7////AAAAAAEAAAD8//7/AAABAAAAAAD8////AAABAAEAAAD7/wAAAAAAAAAAAAD7/wEAAAAAAAEAAAD8/wAAAAABAAAAAAD8/wEAAAABAAEAAAD7/wIAAAAAAAAAAAD7/wMAAAAAAAEAAAD8/wIAAAABAAAAAAD8/wMAAAABAAEAAAD7/wQAAAAAAAAAAAD7/wUAAAAAAAEAAAD8/wQAAAABAAAAAAD8/wUAAAABAAEAAAD9//r/AAAAAAAAAAD9//v/AAAAAAEAAAD+//r/AAABAAAAAAD+//v/AAABAAEAAAD9//z/AAAAAAAAAAD9//3/AAAAAAEAAAD+//z/AAABAAAAAAD+//3/AAABAAEAAAD9//7/AAAAAAAAAAD9////AAAAAAEAAAD+//7/AAABAAAAAAD+////AAABAAEAAAD9/wAAAAAAAAAAAAD9/wEAAAAAAAEAAAD+/wAAAAABAAAAAAD+/wEAAAABAAEAAAD9/wIAAAAAAAAAAAD9/wMAAAAAAAEAAAD+/wIAAAABAAAAAAD+/wMAAAABAAEAAAD9/wQAAAAAAAAAAAD9/wUAAAAAAAEAAAD+/wQAAAABAAAAAAD+/wUAAAABAAEAAAD///r/AAAAAAAAAAD///v/AAAAAAEAAAAAAPr/AAABAAAAAAAAAPv/AAABAAEAAAD///z/AAAAAAAAAAD///3/AAAAAAEAAAAAAPz/AAABAAAAAAAAAP3/AAABAAEAAAD///7/AAAAAAAAAAD/////AAAAAAEAAAAAAP7/AAABAAAAAAAAAP//AAABAAEAAAD//wAAAAAAAAAAAAD//wEAAAAAAAEAAAAAAAAAAAABAAAAAAAAAAEAAAABAAEAAAD//wIAAAAAAAAAAAD//wMAAAAAAAEAAAAAAAIAAAABAAAAAAAAAAMAAAABAAEAAAD//wQAAAAAAAAAAAD//wUAAAAAAAEAAAAAAAQAAAABAAAAAAAAAAUAAAABAAEAAAABAPr/AAAAAAAAAAABAPv/AAAAAAEAAAACAPr/AAABAAAAAAACAPv/AAABAAEAAAABAPz/AAAAAAAAAAABAP3/AAAAAAEAAAACAPz/AAABAAAAAAACAP3/AAABAAEAAAABAP7/AAAAAAAAAAABAP//AAAAAAEAAAACAP7/AAABAAAAAAACAP//AAABAAEAAAABAAAAAAAAAAAAAAABAAEAAAAAAAEAAAACAAAAAAABAAAAAAACAAEAAAABAAEAAAABAAIAAAAAAAAAAAABAAMAAAAAAAEAAAACAAIAAAABAAAAAAACAAMAAAABAAEAAAABAAQAAAAAAAAAAAABAAUAAAAAAAEAAAACAAQAAAABAAAAAAACAAUAAAABAAEAAAADAPr/AAAAAAAAAAADAPv/AAAAAAEAAAAEAPr/AAABAAAAAAAEAPv/AAABAAEAAAADAPz/AAAAAAAAAAADAP3/AAAAAAEAAAAEAPz/AAABAAAAAAAEAP3/AAABAAEAAAADAP7/AAAAAAAAAAADAP//AAAAAAEAAAAEAP7/AAABAAAAAAAEAP//AAABAAEAAAADAAAAAAAAAAAAAAADAAEAAAAAAAEAAAAEAAAAAAABAAAAAAAEAAEAAAABAAEAAAADAAIAAAAAAAAAAAADAAMAAAAAAAEAAAAEAAIAAAABAAAAAAAEAAMAAAABAAEAAAADAAQAAAAAAAAAAAADAAUAAAAAAAEAAAAEAAQAAAABAAAAAAAEAAUAAAABAAEAAAAFAPr/AAAAAAAAAAAFAPv/AAAAAAEAAAAGAPr/AAABAAAAAAAGAPv/AAABAAEAAAAFAPz/AAAAAAAAAAAFAP3/AAAAAAEAAAAGAPz/AAABAAAAAAAGAP3/AAABAAEAAAAFAP7/AAAAAAAAAAAFAP//AAAAAAEAAAAGAP7/AAABAAAAAAAGAP//AAABAAEAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAEAAAAGAAAAAAABAAAAAAAGAAEAAAABAAEAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAEAAAAGAAIAAAABAAAAAAAGAAMAAAABAAEAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAEAAAAGAAQAAAABAAAAAAAGAAUAAAABAAEAAAAHAPr/AAAAAAAAAAAHAPv/AAAAAAEAAAAIAPr/AAABAAAAAAAIAPv/AAABAAEAAAAHAPz/AAAAAAAAAAAHAP3/AAAAAAEAAAAIAPz/AAABAAAAAAAIAP3/AAABAAEAAAAHAP7/AAAAAAAAAAAHAP//AAAAAAEAAAAIAP7/AAABAAAAAAAIAP//AAABAAEAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAEAAAAIAAAAAAABAAAAAAAIAAEAAAABAAEAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAEAAAAIAAIAAAABAAAAAAAIAAMAAAABAAEAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAEAAAAIAAQAAAABAAAAAAAIAAUAAAABAAEAAADt//L/AAAAAAAAAADt//P/AAAAAAEAAADu//L/AAABAAAAAADu//P/AAABAAEAAADt//T/AAAAAAAAAADt//X/AAAAAAEAAADu//T/AAABAAAAAADu//X/AAABAAEAAADt//b/AAAAAAAAAADt//f/AAAAAAEAAADu//b/AAABAAAAAADu//f/AAABAAEAAADt//j/AAAAAAAAAADt//n/AAAAAAEAAADu//j/AAABAAAAAADu//n/AAABAAEAAADt//r/AAAAAAAAAADt//v/AAAAAAEAAADu//r/AAABAAAAAADu//v/AAABAAEAAADt//z/AAAAAAAAAADt//3/AAAAAAEAAADu//z/AAABAAAAAADu//3/AAABAAEAAADt//7/AAAAAAAAAADt////AAAAAAEAAADu//7/AAABAAAAAADu////AAABAAEAAADt/wAAAAAAAAAAAADt/wEAAAAAAAEAAADu/wAAAAABAAAAAADu/wEAAAABAAEAAADt/wIAAAAAAAAAAADt/wMAAAAAAAEAAADu/wIAAAABAAAAAADu/wMAAAABAAEAAADt/wQAAAAAAAAAAADt/wUAAAAAAAEAAADu/wQAAAABAAAAAADu/wUAAAABAAEAAADt/wYAAAAAAAAAAADt/wcAAAAAAAEAAADu/wYAAAABAAAAAADu/wcAAAABAAEAAADt/wgAAAAAAAAAAADt/wkAAAAAAAEAAADu/wgAAAABAAAAAADu/wkAAAABAAEAAADt/woAAAAAAAAAAADt/wsAAAAAAAEAAADu/woAAAABAAAAAADu/wsAAAABAAEAAADt/wwAAAAAAAAAAADt/w0AAAAAAAEAAADu/wwAAAABAAAAAADu/w0AAAABAAEAAADv//L/AAAAAAAAAADv//P/AAAAAAEAAADw//L/AAABAAAAAADw//P/AAABAAEAAADv//T/AAAAAAAAAADv//X/AAAAAAEAAADw//T/AAABAAAAAADw//X/AAABAAEAAADv//b/AAAAAAAAAADv//f/AAAAAAEAAADw//b/AAABAAAAAADw//f/AAABAAEAAADv//j/AAAAAAAAAADv//n/AAAAAAEAAADw//j/AAABAAAAAADw//n/AAABAAEAAADv//r/AAAAAAAAAADv//v/AAAAAAEAAADw//r/AAABAAAAAADw//v/AAABAAEAAADv//z/AAAAAAAAAADv//3/AAAAAAEAAADw//z/AAABAAAAAADw//3/AAABAAEAAADv//7/AAAAAAAAAADv////AAAAAAEAAADw//7/AAABAAAAAADw////AAABAAEAAADv/wAAAAAAAAAAAADv/wEAAAAAAAEAAADw/wAAAAABAAAAAADw/wEAAAABAAEAAADv/wIAAAAAAAAAAADv/wMAAAAAAAEAAADw/wIAAAABAAAAAADw/wMAAAABAAEAAADv/wQAAAAAAAAAAADv/wUAAAAAAAEAAADw/wQAAAABAAAAAADw/wUAAAABAAEAAADv/wYAAAAAAAAAAADv/wcAAAAAAAEAAADw/wYAAAABAAAAAADw/wcAAAABAAEAAADv/wgAAAAAAAAAAADv/wkAAAAAAAEAAADw/wgAAAABAAAAAADw/wkAAAABAAEAAADv/woAAAAAAAAAAADv/wsAAAAAAAEAAADw/woAAAABAAAAAADw/wsAAAABAAEAAADv/wwAAAAAAAAAAADv/w0AAAAAAAEAAADw/wwAAAABAAAAAADw/w0AAAABAAEAAADx//L/AAAAAAAAAADx//P/AAAAAAEAAADy//L/AAABAAAAAADy//P/AAABAAEAAADx//T/AAAAAAAAAADx//X/AAAAAAEAAADy//T/AAABAAAAAADy//X/AAABAAEAAADx//b/AAAAAAAAAADx//f/AAAAAAEAAADy//b/AAABAAAAAADy//f/AAABAAEAAADx//j/AAAAAAAAAADx//n/AAAAAAEAAADy//j/AAABAAAAAADy//n/AAABAAEAAADx//r/AAAAAAAAAADx//v/AAAAAAEAAADy//r/AAABAAAAAADy//v/AAABAAEAAADx//z/AAAAAAAAAADx//3/AAAAAAEAAADy//z/AAABAAAAAADy//3/AAABAAEAAADx//7/AAAAAAAAAADx////AAAAAAEAAADy//7/AAABAAAAAADy////AAABAAEAAADx/wAAAAAAAAAAAADx/wEAAAAAAAEAAADy/wAAAAABAAAAAADy/wEAAAABAAEAAADx/wIAAAAAAAAAAADx/wMAAAAAAAEAAADy/wIAAAABAAAAAADy/wMAAAABAAEAAADx/wQAAAAAAAAAAADx/wUAAAAAAAEAAADy/wQAAAABAAAAAADy/wUAAAABAAEAAADx/wYAAAAAAAAAAADx/wcAAAAAAAEAAADy/wYAAAABAAAAAADy/wcAAAABAAEAAADx/wgAAAAAAAAAAADx/wkAAAAAAAEAAADy/wgAAAABAAAAAADy/wkAAAABAAEAAADx/woAAAAAAAAAAADx/wsAAAAAAAEAAADy/woAAAABAAAAAADy/wsAAAABAAEAAADx/wwAAAAAAAAAAADx/w0AAAAAAAEAAADy/wwAAAABAAAAAADy/w0AAAABAAEAAADz//L/AAAAAAAAAADz//P/AAAAAAEAAAD0//L/AAABAAAAAAD0//P/AAABAAEAAADz//T/AAAAAAAAAADz//X/AAAAAAEAAAD0//T/AAABAAAAAAD0//X/AAABAAEAAADz//b/AAAAAAAAAADz//f/AAAAAAEAAAD0//b/AAABAAAAAAD0//f/AAABAAEAAADz//j/AAAAAAAAAADz//n/AAAAAAEAAAD0//j/AAABAAAAAAD0//n/AAABAAEAAADz//r/AAAAAAAAAADz//v/AAAAAAEAAAD0//r/AAABAAAAAAD0//v/AAABAAEAAADz//z/AAAAAAAAAADz//3/AAAAAAEAAAD0//z/AAABAAAAAAD0//3/AAABAAEAAADz//7/AAAAAAAAAADz////AAAAAAEAAAD0//7/AAABAAAAAAD0////AAABAAEAAADz/wAAAAAAAAAAAADz/wEAAAAAAAEAAAD0/wAAAAABAAAAAAD0/wEAAAABAAEAAADz/wIAAAAAAAAAAADz/wMAAAAAAAEAAAD0/wIAAAABAAAAAAD0/wMAAAABAAEAAADz/wQAAAAAAAAAAADz/wUAAAAAAAEAAAD0/wQAAAABAAAAAAD0/wUAAAABAAEAAADz/wYAAAAAAAAAAADz/wcAAAAAAAEAAAD0/wYAAAABAAAAAAD0/wcAAAABAAEAAADz/wgAAAAAAAAAAADz/wkAAAAAAAEAAAD0/wgAAAABAAAAAAD0/wkAAAABAAEAAADz/woAAAAAAAAAAADz/wsAAAAAAAEAAAD0/woAAAABAAAAAAD0/wsAAAABAAEAAADz/wwAAAAAAAAAAADz/w0AAAAAAAEAAAD0/wwAAAABAAAAAAD0/w0AAAABAAEAAAD1//L/AAAAAAAAAAD1//P/AAAAAAEAAAD2//L/AAABAAAAAAD2//P/AAABAAEAAAD1//T/AAAAAAAAAAD1//X/AAAAAAEAAAD2//T/AAABAAAAAAD2//X/AAABAAEAAAD1//b/AAAAAAAAAAD1//f/AAAAAAEAAAD2//b/AAABAAAAAAD2//f/AAABAAEAAAD1//j/AAAAAAAAAAD1//n/AAAAAAEAAAD2//j/AAABAAAAAAD2//n/AAABAAEAAAD1/wYAAAAAAAAAAAD1/wcAAAAAAAEAAAD2/wYAAAABAAAAAAD2/wcAAAABAAEAAAD1/wgAAAAAAAAAAAD1/wkAAAAAAAEAAAD2/wgAAAABAAAAAAD2/wkAAAABAAEAAAD1/woAAAAAAAAAAAD1/wsAAAAAAAEAAAD2/woAAAABAAAAAAD2/wsAAAABAAEAAAD1/wwAAAAAAAAAAAD1/w0AAAAAAAEAAAD2/wwAAAABAAAAAAD2/w0AAAABAAEAAAD3//L/AAAAAAAAAAD3//P/AAAAAAEAAAD4//L/AAABAAAAAAD4//P/AAABAAEAAAD3//T/AAAAAAAAAAD3//X/AAAAAAEAAAD4//T/AAABAAAAAAD4//X/AAABAAEAAAD3//b/AAAAAAAAAAD3//f/AAAAAAEAAAD4//b/AAABAAAAAAD4//f/AAABAAEAAAD3//j/AAAAAAAAAAD3//n/AAAAAAEAAAD4//j/AAABAAAAAAD4//n/AAABAAEAAAD3/wYAAAAAAAAAAAD3/wcAAAAAAAEAAAD4/wYAAAABAAAAAAD4/wcAAAABAAEAAAD3/wgAAAAAAAAAAAD3/wkAAAAAAAEAAAD4/wgAAAABAAAAAAD4/wkAAAABAAEAAAD3/woAAAAAAAAAAAD3/wsAAAAAAAEAAAD4/woAAAABAAAAAAD4/wsAAAABAAEAAAD3/wwAAAAAAAAAAAD3/w0AAAAAAAEAAAD4/wwAAAABAAAAAAD4/w0AAAABAAEAAAD5//L/AAAAAAAAAAD5//P/AAAAAAEAAAD6//L/AAABAAAAAAD6//P/AAABAAEAAAD5//T/AAAAAAAAAAD5//X/AAAAAAEAAAD6//T/AAABAAAAAAD6//X/AAABAAEAAAD5//b/AAAAAAAAAAD5//f/AAAAAAEAAAD6//b/AAABAAAAAAD6//f/AAABAAEAAAD5//j/AAAAAAAAAAD5//n/AAAAAAEAAAD6//j/AAABAAAAAAD6//n/AAABAAEAAAD5/wYAAAAAAAAAAAD5/wcAAAAAAAEAAAD6/wYAAAABAAAAAAD6/wcAAAABAAEAAAD5/wgAAAAAAAAAAAD5/wkAAAAAAAEAAAD6/wgAAAABAAAAAAD6/wkAAAABAAEAAAD5/woAAAAAAAAAAAD5/wsAAAAAAAEAAAD6/woAAAABAAAAAAD6/wsAAAABAAEAAAD5/wwAAAAAAAAAAAD5/w0AAAAAAAEAAAD6/wwAAAABAAAAAAD6/w0AAAABAAEAAAD7//L/AAAAAAAAAAD7//P/AAAAAAEAAAD8//L/AAABAAAAAAD8//P/AAABAAEAAAD7//T/AAAAAAAAAAD7//X/AAAAAAEAAAD8//T/AAABAAAAAAD8//X/AAABAAEAAAD7//b/AAAAAAAAAAD7//f/AAAAAAEAAAD8//b/AAABAAAAAAD8//f/AAABAAEAAAD7//j/AAAAAAAAAAD7//n/AAAAAAEAAAD8//j/AAABAAAAAAD8//n/AAABAAEAAAD7/wYAAAAAAAAAAAD7/wcAAAAAAAEAAAD8/wYAAAABAAAAAAD8/wcAAAABAAEAAAD7/wgAAAAAAAAAAAD7/wkAAAAAAAEAAAD8/wgAAAABAAAAAAD8/wkAAAABAAEAAAD7/woAAAAAAAAAAAD7/wsAAAAAAAEAAAD8/woAAAABAAAAAAD8/wsAAAABAAEAAAD7/wwAAAAAAAAAAAD7/w0AAAAAAAEAAAD8/wwAAAABAAAAAAD8/w0AAAABAAEAAAD9//L/AAAAAAAAAAD9//P/AAAAAAEAAAD+//L/AAABAAAAAAD+//P/AAABAAEAAAD9//T/AAAAAAAAAAD9//X/AAAAAAEAAAD+//T/AAABAAAAAAD+//X/AAABAAEAAAD9//b/AAAAAAAAAAD9//f/AAAAAAEAAAD+//b/AAABAAAAAAD+//f/AAABAAEAAAD9//j/AAAAAAAAAAD9//n/AAAAAAEAAAD+//j/AAABAAAAAAD+//n/AAABAAEAAAD9/wYAAAAAAAAAAAD9/wcAAAAAAAEAAAD+/wYAAAABAAAAAAD+/wcAAAABAAEAAAD9/wgAAAAAAAAAAAD9/wkAAAAAAAEAAAD+/wgAAAABAAAAAAD+/wkAAAABAAEAAAD9/woAAAAAAAAAAAD9/wsAAAAAAAEAAAD+/woAAAABAAAAAAD+/wsAAAABAAEAAAD9/wwAAAAAAAAAAAD9/w0AAAAAAAEAAAD+/wwAAAABAAAAAAD+/w0AAAABAAEAAAD///L/AAAAAAAAAAD///P/AAAAAAEAAAAAAPL/AAABAAAAAAAAAPP/AAABAAEAAAD///T/AAAAAAAAAAD///X/AAAAAAEAAAAAAPT/AAABAAAAAAAAAPX/AAABAAEAAAD///b/AAAAAAAAAAD///f/AAAAAAEAAAAAAPb/AAABAAAAAAAAAPf/AAABAAEAAAD///j/AAAAAAAAAAD///n/AAAAAAEAAAAAAPj/AAABAAAAAAAAAPn/AAABAAEAAAD//wYAAAAAAAAAAAD//wcAAAAAAAEAAAAAAAYAAAABAAAAAAAAAAcAAAABAAEAAAD//wgAAAAAAAAAAAD//wkAAAAAAAEAAAAAAAgAAAABAAAAAAAAAAkAAAABAAEAAAD//woAAAAAAAAAAAD//wsAAAAAAAEAAAAAAAoAAAABAAAAAAAAAAsAAAABAAEAAAD//wwAAAAAAAAAAAD//w0AAAAAAAEAAAAAAAwAAAABAAAAAAAAAA0AAAABAAEAAAABAPL/AAAAAAAAAAABAPP/AAAAAAEAAAACAPL/AAABAAAAAAACAPP/AAABAAEAAAABAPT/AAAAAAAAAAABAPX/AAAAAAEAAAACAPT/AAABAAAAAAACAPX/AAABAAEAAAABAPb/AAAAAAAAAAABAPf/AAAAAAEAAAACAPb/AAABAAAAAAACAPf/AAABAAEAAAABAPj/AAAAAAAAAAABAPn/AAAAAAEAAAACAPj/AAABAAAAAAACAPn/AAABAAEAAAABAAYAAAAAAAAAAAABAAcAAAAAAAEAAAACAAYAAAABAAAAAAACAAcAAAABAAEAAAABAAgAAAAAAAAAAAABAAkAAAAAAAEAAAACAAgAAAABAAAAAAACAAkAAAABAAEAAAABAAoAAAAAAAAAAAABAAsAAAAAAAEAAAACAAoAAAABAAAAAAACAAsAAAABAAEAAAABAAwAAAAAAAAAAAABAA0AAAAAAAEAAAACAAwAAAABAAAAAAACAA0AAAABAAEAAAADAPL/AAAAAAAAAAADAPP/AAAAAAEAAAAEAPL/AAABAAAAAAAEAPP/AAABAAEAAAADAPT/AAAAAAAAAAADAPX/AAAAAAEAAAAEAPT/AAABAAAAAAAEAPX/AAABAAEAAAADAPb/AAAAAAAAAAADAPf/AAAAAAEAAAAEAPb/AAABAAAAAAAEAPf/AAABAAEAAAADAPj/AAAAAAAAAAADAPn/AAAAAAEAAAAEAPj/AAABAAAAAAAEAPn/AAABAAEAAAADAAYAAAAAAAAAAAADAAcAAAAAAAEAAAAEAAYAAAABAAAAAAAEAAcAAAABAAEAAAADAAgAAAAAAAAAAAADAAkAAAAAAAEAAAAEAAgAAAABAAAAAAAEAAkAAAABAAEAAAADAAoAAAAAAAAAAAADAAsAAAAAAAEAAAAEAAoAAAABAAAAAAAEAAsAAAABAAEAAAADAAwAAAAAAAAAAAADAA0AAAAAAAEAAAAEAAwAAAABAAAAAAAEAA0AAAABAAEAAAAFAPL/AAAAAAAAAAAFAPP/AAAAAAEAAAAGAPL/AAABAAAAAAAGAPP/AAABAAEAAAAFAPT/AAAAAAAAAAAFAPX/AAAAAAEAAAAGAPT/AAABAAAAAAAGAPX/AAABAAEAAAAFAPb/AAAAAAAAAAAFAPf/AAAAAAEAAAAGAPb/AAABAAAAAAAGAPf/AAABAAEAAAAFAPj/AAAAAAAAAAAFAPn/AAAAAAEAAAAGAPj/AAABAAAAAAAGAPn/AAABAAEAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAEAAAAGAAYAAAABAAAAAAAGAAcAAAABAAEAAAAFAAgAAAAAAAAAAAAFAAkAAAAAAAEAAAAGAAgAAAABAAAAAAAGAAkAAAABAAEAAAAFAAoAAAAAAAAAAAAFAAsAAAAAAAEAAAAGAAoAAAABAAAAAAAGAAsAAAABAAEAAAAFAAwAAAAAAAAAAAAFAA0AAAAAAAEAAAAGAAwAAAABAAAAAAAGAA0AAAABAAEAAAAHAPL/AAAAAAAAAAAHAPP/AAAAAAEAAAAIAPL/AAABAAAAAAAIAPP/AAABAAEAAAAHAPT/AAAAAAAAAAAHAPX/AAAAAAEAAAAIAPT/AAABAAAAAAAIAPX/AAABAAEAAAAHAPb/AAAAAAAAAAAHAPf/AAAAAAEAAAAIAPb/AAABAAAAAAAIAPf/AAABAAEAAAAHAPj/AAAAAAAAAAAHAPn/AAAAAAEAAAAIAPj/AAABAAAAAAAIAPn/AAABAAEAAAAHAAYAAAAAAAAAAAAHAAcAAAAAAAEAAAAIAAYAAAABAAAAAAAIAAcAAAABAAEAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAEAAAAIAAgAAAABAAAAAAAIAAkAAAABAAEAAAAHAAoAAAAAAAAAAAAHAAsAAAAAAAEAAAAIAAoAAAABAAAAAAAIAAsAAAABAAEAAAAHAAwAAAAAAAAAAAAHAA0AAAAAAAEAAAAIAAwAAAABAAAAAAAIAA0AAAABAAEAAAAJAPL/AAAAAAAAAAAJAPP/AAAAAAEAAAAKAPL/AAABAAAAAAAKAPP/AAABAAEAAAAJAPT/AAAAAAAAAAAJAPX/AAAAAAEAAAAKAPT/AAABAAAAAAAKAPX/AAABAAEAAAAJAPb/AAAAAAAAAAAJAPf/AAAAAAEAAAAKAPb/AAABAAAAAAAKAPf/AAABAAEAAAAJAPj/AAAAAAAAAAAJAPn/AAAAAAEAAAAKAPj/AAABAAAAAAAKAPn/AAABAAEAAAAJAPr/AAAAAAAAAAAJAPv/AAAAAAEAAAAKAPr/AAABAAAAAAAKAPv/AAABAAEAAAAJAPz/AAAAAAAAAAAJAP3/AAAAAAEAAAAKAPz/AAABAAAAAAAKAP3/AAABAAEAAAAJAP7/AAAAAAAAAAAJAP//AAAAAAEAAAAKAP7/AAABAAAAAAAKAP//AAABAAEAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAEAAAAKAAAAAAABAAAAAAAKAAEAAAABAAEAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAEAAAAKAAIAAAABAAAAAAAKAAMAAAABAAEAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAEAAAAKAAQAAAABAAAAAAAKAAUAAAABAAEAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAEAAAAKAAYAAAABAAAAAAAKAAcAAAABAAEAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAEAAAAKAAgAAAABAAAAAAAKAAkAAAABAAEAAAAJAAoAAAAAAAAAAAAJAAsAAAAAAAEAAAAKAAoAAAABAAAAAAAKAAsAAAABAAEAAAAJAAwAAAAAAAAAAAAJAA0AAAAAAAEAAAAKAAwAAAABAAAAAAAKAA0AAAABAAEAAAALAPL/AAAAAAAAAAALAPP/AAAAAAEAAAAMAPL/AAABAAAAAAAMAPP/AAABAAEAAAALAPT/AAAAAAAAAAALAPX/AAAAAAEAAAAMAPT/AAABAAAAAAAMAPX/AAABAAEAAAALAPb/AAAAAAAAAAALAPf/AAAAAAEAAAAMAPb/AAABAAAAAAAMAPf/AAABAAEAAAALAPj/AAAAAAAAAAALAPn/AAAAAAEAAAAMAPj/AAABAAAAAAAMAPn/AAABAAEAAAALAPr/AAAAAAAAAAALAPv/AAAAAAEAAAAMAPr/AAABAAAAAAAMAPv/AAABAAEAAAALAPz/AAAAAAAAAAALAP3/AAAAAAEAAAAMAPz/AAABAAAAAAAMAP3/AAABAAEAAAALAP7/AAAAAAAAAAALAP//AAAAAAEAAAAMAP7/AAABAAAAAAAMAP//AAABAAEAAAALAAAAAAAAAAAAAAALAAEAAAAAAAEAAAAMAAAAAAABAAAAAAAMAAEAAAABAAEAAAALAAIAAAAAAAAAAAALAAMAAAAAAAEAAAAMAAIAAAABAAAAAAAMAAMAAAABAAEAAAALAAQAAAAAAAAAAAALAAUAAAAAAAEAAAAMAAQAAAABAAAAAAAMAAUAAAABAAEAAAALAAYAAAAAAAAAAAALAAcAAAAAAAEAAAAMAAYAAAABAAAAAAAMAAcAAAABAAEAAAALAAgAAAAAAAAAAAALAAkAAAAAAAEAAAAMAAgAAAABAAAAAAAMAAkAAAABAAEAAAALAAoAAAAAAAAAAAALAAsAAAAAAAEAAAAMAAoAAAABAAAAAAAMAAsAAAABAAEAAAALAAwAAAAAAAAAAAALAA0AAAAAAAEAAAAMAAwAAAABAAAAAAAMAA0AAAABAAEAAAANAPL/AAAAAAAAAAANAPP/AAAAAAEAAAAOAPL/AAABAAAAAAAOAPP/AAABAAEAAAANAPT/AAAAAAAAAAANAPX/AAAAAAEAAAAOAPT/AAABAAAAAAAOAPX/AAABAAEAAAANAPb/AAAAAAAAAAANAPf/AAAAAAEAAAAOAPb/AAABAAAAAAAOAPf/AAABAAEAAAANAPj/AAAAAAAAAAANAPn/AAAAAAEAAAAOAPj/AAABAAAAAAAOAPn/AAABAAEAAAANAPr/AAAAAAAAAAANAPv/AAAAAAEAAAAOAPr/AAABAAAAAAAOAPv/AAABAAEAAAANAPz/AAAAAAAAAAANAP3/AAAAAAEAAAAOAPz/AAABAAAAAAAOAP3/AAABAAEAAAANAP7/AAAAAAAAAAANAP//AAAAAAEAAAAOAP7/AAABAAAAAAAOAP//AAABAAEAAAANAAAAAAAAAAAAAAANAAEAAAAAAAEAAAAOAAAAAAABAAAAAAAOAAEAAAABAAEAAAANAAIAAAAAAAAAAAANAAMAAAAAAAEAAAAOAAIAAAABAAAAAAAOAAMAAAABAAEAAAANAAQAAAAAAAAAAAANAAUAAAAAAAEAAAAOAAQAAAABAAAAAAAOAAUAAAABAAEAAAANAAYAAAAAAAAAAAANAAcAAAAAAAEAAAAOAAYAAAABAAAAAAAOAAcAAAABAAEAAAANAAgAAAAAAAAAAAANAAkAAAAAAAEAAAAOAAgAAAABAAAAAAAOAAkAAAABAAEAAAANAAoAAAAAAAAAAAANAAsAAAAAAAEAAAAOAAoAAAABAAAAAAAOAAsAAAABAAEAAAANAAwAAAAAAAAAAAANAA0AAAAAAAEAAAAOAAwAAAABAAAAAAAOAA0AAAABAAEAAAAPAPL/AAAAAAAAAAAPAPP/AAAAAAEAAAAQAPL/AAABAAAAAAAQAPP/AAABAAEAAAAPAPT/AAAAAAAAAAAPAPX/AAAAAAEAAAAQAPT/AAABAAAAAAAQAPX/AAABAAEAAAAPAPb/AAAAAAAAAAAPAPf/AAAAAAEAAAAQAPb/AAABAAAAAAAQAPf/AAABAAEAAAAPAPj/AAAAAAAAAAAPAPn/AAAAAAEAAAAQAPj/AAABAAAAAAAQAPn/AAABAAEAAAAPAPr/AAAAAAAAAAAPAPv/AAAAAAEAAAAQAPr/AAABAAAAAAAQAPv/AAABAAEAAAAPAPz/AAAAAAAAAAAPAP3/AAAAAAEAAAAQAPz/AAABAAAAAAAQAP3/AAABAAEAAAAPAP7/AAAAAAAAAAAPAP//AAAAAAEAAAAQAP7/AAABAAAAAAAQAP//AAABAAEAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAEAAAAQAAAAAAABAAAAAAAQAAEAAAABAAEAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAEAAAAQAAIAAAABAAAAAAAQAAMAAAABAAEAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAEAAAAQAAQAAAABAAAAAAAQAAUAAAABAAEAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAEAAAAQAAYAAAABAAAAAAAQAAcAAAABAAEAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAEAAAAQAAgAAAABAAAAAAAQAAkAAAABAAEAAAAPAAoAAAAAAAAAAAAPAAsAAAAAAAEAAAAQAAoAAAABAAAAAAAQAAsAAAABAAEAAAAPAAwAAAAAAAAAAAAPAA0AAAAAAAEAAAAQAAwAAAABAAAAAAAQAA0AAAABAAEAAAARAPL/AAAAAAAAAAARAPP/AAAAAAEAAAARAPT/AAAAAAAAAAARAPX/AAAAAAEAAAARAPb/AAAAAAAAAAARAPf/AAAAAAEAAAARAPj/AAAAAAAAAAARAPn/AAAAAAEAAAARAPr/AAAAAAAAAAARAPv/AAAAAAEAAAARAPz/AAAAAAAAAAARAP3/AAAAAAEAAAARAP7/AAAAAAAAAAARAP//AAAAAAEAAAARAAAAAAAAAAAAAAARAAEAAAAAAAEAAAARAAIAAAAAAAAAAAARAAMAAAAAAAEAAAARAAQAAAAAAAAAAAARAAUAAAAAAAEAAAARAAYAAAAAAAAAAAARAAcAAAAAAAEAAAARAAgAAAAAAAAAAAARAAkAAAAAAAEAAAARAAoAAAAAAAAAAAARAAsAAAAAAAEAAAARAAwAAAAAAAAAAAARAA0AAAAAAAEAAADr//D/AAAAAAAAAADr//H/AAAAAAEAAADs//D/AAABAAAAAADs//H/AAABAAEAAADt//D/AAAAAAAAAADt//H/AAAAAAEAAADu//D/AAABAAAAAADu//H/AAABAAEAAADv//D/AAAAAAAAAADv//H/AAAAAAEAAADw//D/AAABAAAAAADw//H/AAABAAEAAADx//D/AAAAAAAAAADx//H/AAAAAAEAAADy//D/AAABAAAAAADy//H/AAABAAEAAADz//D/AAAAAAAAAADz//H/AAAAAAEAAAD0//D/AAABAAAAAAD0//H/AAABAAEAAAD1//D/AAAAAAAAAAD1//H/AAAAAAEAAAD2//D/AAABAAAAAAD2//H/AAABAAEAAAD3//D/AAAAAAAAAAD3//H/AAAAAAEAAAD4//D/AAABAAAAAAD4//H/AAABAAEAAAD5//D/AAAAAAAAAAD5//H/AAAAAAEAAAD6//D/AAABAAAAAAD6//H/AAABAAEAAAD7//D/AAAAAAAAAAD7//H/AAAAAAEAAAD8//D/AAABAAAAAAD8//H/AAABAAEAAAD9//D/AAAAAAAAAAD9//H/AAAAAAEAAAD+//D/AAABAAAAAAD+//H/AAABAAEAAAD///D/AAAAAAAAAAD///H/AAAAAAEAAAAAAPD/AAABAAAAAAAAAPH/AAABAAEAAAABAPD/AAAAAAAAAAABAPH/AAAAAAEAAAACAPD/AAABAAAAAAACAPH/AAABAAEAAAADAPD/AAAAAAAAAAADAPH/AAAAAAEAAAAEAPD/AAABAAAAAAAEAPH/AAABAAEAAAAFAPD/AAAAAAAAAAAFAPH/AAAAAAEAAAAGAPD/AAABAAAAAAAGAPH/AAABAAEAAAAHAPD/AAAAAAAAAAAHAPH/AAAAAAEAAAAIAPD/AAABAAAAAAAIAPH/AAABAAEAAAAJAPD/AAAAAAAAAAAJAPH/AAAAAAEAAAAKAPD/AAABAAAAAAAKAPH/AAABAAEAAAALAPD/AAAAAAAAAAALAPH/AAAAAAEAAAAMAPD/AAABAAAAAAAMAPH/AAABAAEAAAANAPD/AAAAAAAAAAANAPH/AAAAAAEAAAAOAPD/AAABAAAAAAAOAPH/AAABAAEAAAAPAPD/AAAAAAAAAAAPAPH/AAAAAAEAAAAQAPD/AAABAAAAAAAQAPH/AAABAAEAAAARAPD/AAAAAAAAAAARAPH/AAAAAAEAAAASAPD/AAABAAAAAAASAPH/AAABAAEAAAATAPD/AAAAAAAAAAATAPH/AAAAAAEAAAAUAPD/AAABAAAAAAAUAPH/AAABAAEAAADr//L/AAAAAAAAAADr//P/AAAAAAEAAADs//L/AAABAAAAAADs//P/AAABAAEAAADr//T/AAAAAAAAAADr//X/AAAAAAEAAADs//T/AAABAAAAAADs//X/AAABAAEAAADr//b/AAAAAAAAAADr//f/AAAAAAEAAADs//b/AAABAAAAAADs//f/AAABAAEAAADr//j/AAAAAAAAAADr//n/AAAAAAEAAADs//j/AAABAAAAAADs//n/AAABAAEAAADr//r/AAAAAAAAAADr//v/AAAAAAEAAADs//r/AAABAAAAAADs//v/AAABAAEAAADr//z/AAAAAAAAAADr//3/AAAAAAEAAADs//z/AAABAAAAAADs//3/AAABAAEAAADr//7/AAAAAAAAAADr////AAAAAAEAAADs//7/AAABAAAAAADs////AAABAAEAAADr/wAAAAAAAAAAAADr/wEAAAAAAAEAAADs/wAAAAABAAAAAADs/wEAAAABAAEAAADr/wIAAAAAAAAAAADr/wMAAAAAAAEAAADs/wIAAAABAAAAAADs/wMAAAABAAEAAADr/wQAAAAAAAAAAADr/wUAAAAAAAEAAADs/wQAAAABAAAAAADs/wUAAAABAAEAAADr/wYAAAAAAAAAAADr/wcAAAAAAAEAAADs/wYAAAABAAAAAADs/wcAAAABAAEAAADr/wgAAAAAAAAAAADr/wkAAAAAAAEAAADs/wgAAAABAAAAAADs/wkAAAABAAEAAADr/woAAAAAAAAAAADr/wsAAAAAAAEAAADs/woAAAABAAAAAADs/wsAAAABAAEAAADr/wwAAAAAAAAAAADr/w0AAAAAAAEAAADs/wwAAAABAAAAAADs/w0AAAABAAEAAADr/w4AAAAAAAAAAADr/w8AAAAAAAEAAADs/w4AAAABAAAAAADs/w8AAAABAAEAAADt/w4AAAAAAAAAAADt/w8AAAAAAAEAAADu/w4AAAABAAAAAADu/w8AAAABAAEAAADv/w4AAAAAAAAAAADv/w8AAAAAAAEAAADw/w4AAAABAAAAAADw/w8AAAABAAEAAADx/w4AAAAAAAAAAADx/w8AAAAAAAEAAADy/w4AAAABAAAAAADy/w8AAAABAAEAAADz/w4AAAAAAAAAAADz/w8AAAAAAAEAAAD0/w4AAAABAAAAAAD0/w8AAAABAAEAAAD1/w4AAAAAAAAAAAD1/w8AAAAAAAEAAAD2/w4AAAABAAAAAAD2/w8AAAABAAEAAAD3/w4AAAAAAAAAAAD3/w8AAAAAAAEAAAD4/w4AAAABAAAAAAD4/w8AAAABAAEAAAD5/w4AAAAAAAAAAAD5/w8AAAAAAAEAAAD6/w4AAAABAAAAAAD6/w8AAAABAAEAAAD7/w4AAAAAAAAAAAD7/w8AAAAAAAEAAAD8/w4AAAABAAAAAAD8/w8AAAABAAEAAAD9/w4AAAAAAAAAAAD9/w8AAAAAAAEAAAD+/w4AAAABAAAAAAD+/w8AAAABAAEAAAD//w4AAAAAAAAAAAD//w8AAAAAAAEAAAAAAA4AAAABAAAAAAAAAA8AAAABAAEAAAABAA4AAAAAAAAAAAABAA8AAAAAAAEAAAACAA4AAAABAAAAAAACAA8AAAABAAEAAAADAA4AAAAAAAAAAAADAA8AAAAAAAEAAAAEAA4AAAABAAAAAAAEAA8AAAABAAEAAAAFAA4AAAAAAAAAAAAFAA8AAAAAAAEAAAAGAA4AAAABAAAAAAAGAA8AAAABAAEAAAAHAA4AAAAAAAAAAAAHAA8AAAAAAAEAAAAIAA4AAAABAAAAAAAIAA8AAAABAAEAAAAJAA4AAAAAAAAAAAAJAA8AAAAAAAEAAAAKAA4AAAABAAAAAAAKAA8AAAABAAEAAAALAA4AAAAAAAAAAAALAA8AAAAAAAEAAAAMAA4AAAABAAAAAAAMAA8AAAABAAEAAAANAA4AAAAAAAAAAAANAA8AAAAAAAEAAAAOAA4AAAABAAAAAAAOAA8AAAABAAEAAAAPAA4AAAAAAAAAAAAPAA8AAAAAAAEAAAAQAA4AAAABAAAAAAAQAA8AAAABAAEAAAARAA4AAAAAAAAAAAARAA8AAAAAAAEAAAASAA4AAAABAAAAAAASAA8AAAABAAEAAAATAA4AAAAAAAAAAAATAA8AAAAAAAEAAAAUAA4AAAABAAAAAAAUAA8AAAABAAEAAAASAPL/AAAAAAAAAAASAPP/AAAAAAEAAAATAPL/AAABAAAAAAATAPP/AAABAAEAAAASAPT/AAAAAAAAAAASAPX/AAAAAAEAAAATAPT/AAABAAAAAAATAPX/AAABAAEAAAASAPb/AAAAAAAAAAASAPf/AAAAAAEAAAATAPb/AAABAAAAAAATAPf/AAABAAEAAAASAPj/AAAAAAAAAAASAPn/AAAAAAEAAAATAPj/AAABAAAAAAATAPn/AAABAAEAAAASAPr/AAAAAAAAAAASAPv/AAAAAAEAAAATAPr/AAABAAAAAAATAPv/AAABAAEAAAASAPz/AAAAAAAAAAASAP3/AAAAAAEAAAATAPz/AAABAAAAAAATAP3/AAABAAEAAAASAP7/AAAAAAAAAAASAP//AAAAAAEAAAATAP7/AAABAAAAAAATAP//AAABAAEAAAASAAAAAAAAAAAAAAASAAEAAAAAAAEAAAATAAAAAAABAAAAAAATAAEAAAABAAEAAAASAAIAAAAAAAAAAAASAAMAAAAAAAEAAAATAAIAAAABAAAAAAATAAMAAAABAAEAAAASAAQAAAAAAAAAAAASAAUAAAAAAAEAAAATAAQAAAABAAAAAAATAAUAAAABAAEAAAASAAYAAAAAAAAAAAASAAcAAAAAAAEAAAATAAYAAAABAAAAAAATAAcAAAABAAEAAAASAAgAAAAAAAAAAAASAAkAAAAAAAEAAAATAAgAAAABAAAAAAATAAkAAAABAAEAAAASAAoAAAAAAAAAAAASAAsAAAAAAAEAAAATAAoAAAABAAAAAAATAAsAAAABAAEAAAASAAwAAAAAAAAAAAASAA0AAAAAAAEAAAATAAwAAAABAAAAAAATAA0AAAABAAEAAAA=")
tile_set = SubResource("TileSet_v158k")

[node name="Pond" parent="World" instance=ExtResource("3_wowpa")]
position = Vector2(128, 94)
scale = Vector2(5, 5)

[node name="Title" parent="World" instance=ExtResource("4_i6g32")]
position = Vector2(5, -331)
scale = Vector2(2, 2)

[node name="Entities" type="Node2D" parent="."]

[node name="Player" parent="Entities" instance=ExtResource("1_qxrlw")]
position = Vector2(-171, 16)

[node name="Camera2D" type="Camera2D" parent="Entities/Player"]
zoom = Vector2(2, 2)
position_smoothing_enabled = true

[node name="Blue Slime" parent="." instance=ExtResource("2_wrm1d")]
position = Vector2(83, 9)
scale = Vector2(1.5, 1.5)

[node name="Blue Slime2" parent="." instance=ExtResource("2_wrm1d")]
position = Vector2(44, 1)
scale = Vector2(1.5, 1.5)

[node name="Blue Slime3" parent="." instance=ExtResource("2_wrm1d")]
position = Vector2(57, 34)

[node name="lush chimp" parent="." instance=ExtResource("5_1l0tm")]
position = Vector2(-23, 60)
scale = Vector2(1.5, 1.5)

[node name="lush chimp2" parent="." instance=ExtResource("5_1l0tm")]
position = Vector2(-63, 103)

[node name="lush chimp3" parent="." instance=ExtResource("5_1l0tm")]
position = Vector2(-42, 8)

[connection signal="damage_dealt" from="Entities/Player" to="." method="_on_player_damage_dealt"]
